Add JAR and run arguments that avoid LWJGL3...
... warnings on recent JDKs.